# rust-hash-bench

./: Cargo.toml  README.md
src/: main.rs
