[package]
name = "hash_speed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.2"
blake3= "1.2.0"
sha1 = "0.6.0"
sha2 = "0.9.8"
sha3 = "0.9.1"
digest = "0.9.0"
once_cell = { version = "1.8.0", features = ["parking_lot"]}
rand = "0.8.4"
ring = "0.16.20"
tiny-keccak = { version = "2.0.2", features = ["fips202", "k12"] }
