[package]
name = "hash_speed"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
blake3= "1.6.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
digest = "0.10.7"
once_cell = { version = "1.20.3", features = ["parking_lot"]}
rand = "0.9.0"
ring = "0.17.9"
tiny-keccak = { version = "2.0.2", features = ["fips202", "k12"] }
